fix: resolve Java version compatibility issues
- Replace Thread.currentThread().threadId() with Thread.currentThread().getId()
- Ensures compatibility with Java 17 (threadId() requires Java 19+)
- Resolves compilation errors in GitHub Actions CI
- Maintains thread-safe unique ID generation